chore: initial configuration

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,600;1,700;1,900&display=swap');
+
+/* Order */
+@layer reset, primeng;
+
+/* Reset CSS */
+@layer reset {
+  body {
+    margin: 0;
+    background-color: #f5f5f5;
+    font-family: var(--font-family);
+  }
+}
+
+:root {
+  --font-family: 'Poppins', sans-serif;
+}
+
+// UTILS
+.u-cover,
+.u-cover img {
+  object-fit: cover;
+}
