--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -22,6 +22,7 @@
         severity="secondary"
         icon="pi pi-sign-out"
         text
+        (click)="logout()"
       />
       <p-avatar
         class="flex"
